vbnc/vbnc/tests/Errors/32106.vb
Namespace Constraint1
    Class A(Of Z As Class)
        Dim B As A(Of Integer)
    End Class
End Namespace